--- a/pierre_stuff/1.0/music/3b.html
+++ b/pierre_stuff/1.0/music/3b.html
@@ -103,7 +103,6 @@
 </ul>
   </nav>
 </div>
-<!--
 <div class="nav-panel-explore" data-panel="explore">
   <div class="context">
     <span class="title">Pierre&#x27;s Stuff</span>
@@ -119,7 +118,7 @@
       </ul>
     </li>
   </ul>
-</div>-->
+</div>
     </div>
   </aside>
 </div>
