--- a/pierre_stuff/1.0/index.html
+++ b/pierre_stuff/1.0/index.html
@@ -103,7 +103,7 @@
 </ul>
   </nav>
 </div>
-<!--<div class="nav-panel-explore" data-panel="explore">
+<div class="nav-panel-explore" data-panel="explore">
   <div class="context">
     <span class="title">Pierre&#x27;s Stuff</span>
     <span class="version">1.0</span>
@@ -118,7 +118,7 @@
       </ul>
     </li>
   </ul>
-</div>!-->
+</div>
     </div>
   </aside>
 </div>
