added missing formula

--- a/pierre_stuff/0.1/science/prologue.html
+++ b/pierre_stuff/0.1/science/prologue.html
@@ -357,7 +357,7 @@ The fact that <strong><em>r</em></strong> is smaller than <strong><em>w</em></st
 <div class="ulist">
 <ul>
 <li>
-<p>The <strong>position</strong> of our object, also modelled as a vector, say <strong><em>\$\vec{pos}\$</em></strong>. Its components are often noted a bit specifically: <strong><em>\$\vec{pos}\$</em></strong> instead of <strong><em>(pos<sub>x</sub>, pos<sub>y</sub>,pos<sub>z</sub>)</em></strong>. This position changes with time <strong><em>t</em></strong>, therefore we note it: <strong><em>\$\vec{pos}\$(t) = (x(t), y(t), z(t))</em></strong></p>
+<p>The <strong>position</strong> of our object, also modelled as a vector, say <strong><em>\$\vec{pos}\$</em></strong>. Its components are often noted a bit specifically: <strong><em>\$\vec{pos}\$ = (x, y, z)</em></strong> instead of <strong><em>(pos<sub>x</sub>, pos<sub>y</sub>,pos<sub>z</sub>)</em></strong>. This position changes with time <strong><em>t</em></strong>, therefore we note it: <strong><em>\$\vec{pos}\$(t) = (x(t), y(t), z(t))</em></strong></p>
 </li>
 <li>
 <p>The <strong>velocity</strong> of our object. It also changes with time, therefore we note it <strong><em>\$\vec{v}\$(t) = (v<sub>x</sub>(t), v<sub>y</sub>(t), v<sub>z</sub>(t))</em></strong>. We can say that <strong><em>\$\vec{v}\$(t)</em></strong> represents the <em>variation</em> of <strong><em>\$\vec{pos}\$(t)</em></strong>.</p>
@@ -753,30 +753,6 @@ Used in electricity. Larger derived units are more commonly used: kWh, mWh, GWh,
 </footer>
 <script src="../../../_/js/site.js"></script>
 <script async src="../../../_/js/vendor/highlight.js"></script>
-<script type="text/x-mathjax-config">
-MathJax.Hub.Config({
-  messageStyle: "none",
-  tex2jax: {
-    inlineMath: [["\\(", "\\)"]],
-    displayMath: [["\\[", "\\]"]],
-    ignoreClass: "nostem|nolatexmath"
-  },
-  asciimath2jax: {
-    delimiters: [["\\$", "\\$"]],
-    ignoreClass: "nostem|noasciimath"
-  },
-  TeX: { equationNumbers: { autoNumber: "none" } }
-})
-MathJax.Hub.Register.StartupHook("AsciiMath Jax Ready", function () {
-  MathJax.InputJax.AsciiMath.postfilterHooks.Add(function (data, node) {
-    if ((node = data.script.parentNode) && (node = node.parentNode) && node.classList.contains('stemblock')) {
-      data.math.root.display = "block"
-    }
-    return data
-  })
-})
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_HTMLorMML"></script>
 <script type="text/x-mathjax-config">
 MathJax.Hub.Config({
   messageStyle: "none",
