--- a/pierre_stuff/0.1/index.html
+++ b/pierre_stuff/0.1/index.html
@@ -140,7 +140,7 @@
 <article class="doc">
 <h1 class="page">Pierre&#8217;s Stuff</h1>
 <div class="paragraph">
-<p>&lt;placeholder for landing page text&gt;</p>
+<p>The pleasure of sharing&#8230;&#8203;</p>
 </div>
 </article>
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
