--- a/pierre_stuff/0.1/science/relativity.html
+++ b/pierre_stuff/0.1/science/relativity.html
@@ -59,7 +59,7 @@
     <div class="panels">
 <div class="nav-panel-menu is-active" data-panel="menu">
   <nav class="nav-menu">
-    <h3 class="title"><a href="../index.html">Pierre&#x27;s Stuff</a></h3>
+    <h3 class="title"><a href="../index.html">About &quot;Pierre&#x27;s Stuff&quot;</a></h3>
 <ul class="nav-list">
   <li class="nav-item" data-depth="0">
     <button class="nav-item-toggle"></button>
@@ -105,12 +105,12 @@
 </div>
 <div class="nav-panel-explore" data-panel="explore">
   <div class="context">
-    <span class="title">Pierre&#x27;s Stuff</span>
+    <span class="title">About &quot;Pierre&#x27;s Stuff&quot;</span>
     <span class="version">0.1</span>
   </div>
   <ul class="components">
     <li class="component is-current">
-      <span class="title">Pierre's Stuff</span>
+      <span class="title">About "Pierre's Stuff"</span>
       <ul class="versions">
         <li class="version is-current is-latest">
           <a href="../index.html">0.1</a>
@@ -129,7 +129,7 @@
   <!--
 <nav class="breadcrumbs" aria-label="breadcrumbs">
   <ul>
-    <li><a href="../index.html">Pierre's Stuff</a></li>
+    <li><a href="../index.html">About "Pierre's Stuff"</a></li>
     <li><a href="index.html">Science</a></li>
     <li><a href="relativity.html">Sensing Relativity</a></li>
   </ul>
