--- a/pierre_stuff/0.1/science/prologue.html
+++ b/pierre_stuff/0.1/science/prologue.html
@@ -140,10 +140,12 @@
   <div class="content">
 <article class="doc">
 <h1 class="page">Prologue</h1>
+<div class="paragraph">
+<p>You can download this essay from <a href=https://drive.google.com/file/d/1GBrORWAYt4opLr_zjFgpQPwbvib8D3M8/view?usp=sharing>here.</a></p>
+</div>
 <div class="sect1">
 <h2 id="introduction"><a class="anchor" href="#introduction"></a>Introduction</h2>
 <div class="sectionbody">
-<div class="paragraph">
 <p>Let&#8217;s get one thing out of the way: I find the natural sciences fascinating. This paper is opening a series whose ambition is to share this fascination, and perhaps to spark some new interest in this topic. So don&#8217;t expect a serious analysis of science vs ethical dilemmas, or the importance of science vs other areas of knowledge – I am way too biased for that. Rather, expect a hopefully pleasant and understandable explanation of some key scientific concepts, through examples that you can easily reuse to impress whomever you need to impress in cocktail conversations.</p>
 </div>
 <div class="paragraph">
