--- a/pierre_stuff/1.0/index.html
+++ b/pierre_stuff/1.0/index.html
@@ -54,7 +54,7 @@
   </nav>
 </header>
 <div class="body">
-<div class="nav-container" data-component="pierre_stuff" data-version="0.1">
+<div class="nav-container" data-component="pierre_stuff" data-version="1.0">
   <aside class="nav">
     <div class="panels">
 <div class="nav-panel-menu is-active" data-panel="menu">
@@ -106,14 +106,14 @@
 <div class="nav-panel-explore" data-panel="explore">
   <div class="context">
     <span class="title">About &quot;Pierre&#x27;s Stuff&quot;</span>
-    <span class="version">0.1</span>
+    <span class="version">1.0</span>
   </div>
   <ul class="components">
     <li class="component is-current">
       <span class="title">About "Pierre's Stuff"</span>
       <ul class="versions">
         <li class="version is-current is-latest">
-          <a href="index.html">0.1</a>
+          <a href="index.html">1.0</a>
         </li>
       </ul>
     </li>
@@ -140,7 +140,31 @@
 <article class="doc">
 <h1 class="page">About this project</h1>
 <div class="paragraph">
-<p>The pleasure of sharing&#8230;&#8203;</p>
+<p><strong>The pleasure of sharing&#8230;&#8203;</strong></p>
+</div>
+<div class="paragraph">
+<p>Dear Reader,</p>
+</div>
+<div class="paragraph">
+<p>Understand, love, and share.  You may think this refers to my shrink, Romeo &amp; Juliet, and Saint-Martin, but in this instance it just summarises some passions of mine: learning and understanding stuff; marvelling at the world around me – people, nature, music, art in general; and sharing what I find interesting or worth admiring.</p>
+</div>
+<div class="paragraph">
+<p>Social networks or blogs are great sharing tools, but not suitable if you want to share a bit more thinking. So this site has been designed to share good old papers and essays, in suitable formats for computers, phones, and tablets. Its main fuel is the selfish pleasure I take in writing and sharing. And the hope that it will give you, dear Reader, some food for thought, the pleasure that comes with discovery, and also a bit of fun. The price to pay: active reading for more than half a page. ;-)</p>
+</div>
+<div class="paragraph">
+<p>The first section contains papers about some science-related topics I find particularly fascinating. I try to present them in an accessible way – and from a bit of a "different angle" as well. It is still in the making with more stuff in the pipeline, but we have to start somewhere: an introductory paper, then a 3-episode series about energy. To get started: click <a href="science/index.html" class="page">here</a>!</p>
+</div>
+<div class="paragraph">
+<p>Other sections will follow – music, art, society, etc. Just bear with me…</p>
+</div>
+<div class="paragraph">
+<p>I hope you will enjoy the trip – I certainly do!</p>
+</div>
+<div class="paragraph">
+<p>Many thanks for your visit.</p>
+</div>
+<div class="paragraph">
+<p>Pierre Combelles</p>
 </div>
 </article>
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
@@ -150,6 +174,7 @@
 </main>
 </div>
 <footer class="footer">
+  <p style="color:black";>Editorial advice and website support by Vanda Illyes.</p>
   <p>This page was built using the Antora default UI.</p>
   <p>The source code for this UI is licensed under the terms of the MPL-2.0 license.</p>
 </footer>
