--- a/pierre_stuff/1.0/science/prologue.html
+++ b/pierre_stuff/1.0/science/prologue.html
@@ -54,7 +54,7 @@
   </nav>
 </header>
 <div class="body">
-<div class="nav-container" data-component="pierre_stuff" data-version="0.1">
+<div class="nav-container" data-component="pierre_stuff" data-version="1.0">
   <aside class="nav">
     <div class="panels">
 <div class="nav-panel-menu is-active" data-panel="menu">
@@ -106,14 +106,14 @@
 <div class="nav-panel-explore" data-panel="explore">
   <div class="context">
     <span class="title">About &quot;Pierre&#x27;s Stuff&quot;</span>
-    <span class="version">0.1</span>
+    <span class="version">1.0</span>
   </div>
   <ul class="components">
     <li class="component is-current">
       <span class="title">About "Pierre's Stuff"</span>
       <ul class="versions">
         <li class="version is-current is-latest">
-          <a href="../index.html">0.1</a>
+          <a href="../index.html">1.0</a>
         </li>
       </ul>
     </li>
@@ -144,9 +144,6 @@
 <h2 id="introduction"><a class="anchor" href="#introduction"></a>Introduction</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>You can download this essay from <a href=https://drive.google.com/file/d/1GBrORWAYt4opLr_zjFgpQPwbvib8D3M8/view?usp=sharing>here.</a></p>
-</div> 
-<div class="paragraph"> 
 <p>Let&#8217;s get one thing out of the way: I find the natural sciences fascinating. This paper is opening a series whose ambition is to share this fascination, and perhaps to spark some new interest in this topic. So don&#8217;t expect a serious analysis of science vs ethical dilemmas, or the importance of science vs other areas of knowledge – I am way too biased for that. Rather, expect a hopefully pleasant and understandable explanation of some key scientific concepts, through examples that you can easily reuse to impress whomever you need to impress in cocktail conversations.</p>
 </div>
 <div class="paragraph">
@@ -366,7 +363,7 @@ The fact that <strong><em>r</em></strong> is smaller than <strong><em>w</em></st
 </ul>
 </div>
 <div class="paragraph">
-<p>In many instances, <strong><em>\$\vec{f}\$<sub>total</sub>(t)</em></strong> can be expressed as a function of <strong><em>\$\vec{pos}\$(t)</em></strong> <sup class="footnote">[<a id="_footnoteref_1" class="footnote" href="#_footnotedef_1" title="For example, gravity: the gravitational force applying to an object attracted by the Earth (i.e. its weight) depends on the position of the object relative to the Earth. It points from the object towards the centre of the Earth, and we remember that its magnitude depends on the square distance from the object to the centre of the Earth.">1</a>]</sup> and/or <strong><em>\$\vec{v}\$(t)</em></strong> <sup class="footnote">[<a id="_footnoteref_2" class="footnote" href="#_footnotedef_2" title="For example, air friction: the resisting force applying to a moving object depends on the velocity of this object relative to the air.">2</a>]</sup>.</p>
+<p>In many instances, <strong><em>\$\vec{f}\$<sub>total</sub>(t)</em></strong> can be expressed as a function of <strong><em>\$\vec{pos}\$(t)</em></strong> <sup class="footnote">[<a id="_footnoteref_1" class="footnote" href="#_footnotedef_1" title="View footnote.">1</a>]</sup> and/or <strong><em>\$\vec{v}\$(t)</em></strong> <sup class="footnote">[<a id="_footnoteref_2" class="footnote" href="#_footnotedef_2" title="View footnote.">2</a>]</sup>.</p>
 </div>
 <div class="paragraph">
 <p>As a consequence, the relation <strong><em>\$\vec{f}\$<sub>total</sub>(t) = m\$\vec{γ}\$(t)</em></strong> can be transformed into an equation that binds <strong><em>\$\vec{pos}\$(t)</em></strong>, <strong><em>\$\vec{v}\$(t)</em></strong>, and <strong><em>\$\vec{γ}\$(t)</em></strong>. In other words, a relation between <strong><em>\$\vec{pos}\$(t)</em></strong>, its variation and the variation of its variation! Maths will rescue us here&#8230;&#8203; Such equations are called <em>differential equations</em>, and have been studied extensively. They allow us to calculate <strong><em>\$\vec{pos}\$(t)</em></strong> as a function of time only, i.e. to predict the object&#8217;s trajectory. To be honest, most differential equations can&#8217;t be solved into clean formulae. Instead, <strong><em>\$\vec{pos}\$(t)</em></strong> has to be calculated step by step by a computer, following small time increments. But in some very useful cases, we can find a nice formula describing <strong><em>\$\vec{pos}\$(t)</em></strong>, a famous example being the movement of satellites around planets, or planets around stars.</p>
@@ -682,7 +679,7 @@ Smaller derived values: mV, µV, etc.</p></td>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Joule</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">J</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">1J = 1kg x m<sup>2</sup>/s<sup>2</sup> = 1V x A, unit for measuring "man-scale" energy</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">1J = 1kgxm<sup>2</sup>/s<sup>2</sup> = 1VxA, unit for measuring "man-scale" energy</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top" colspan="3"><p class="tableblock"><strong><em>Smaller energy units (mJ, µJ, etc. are not commonly used)</em></strong></p></td>
@@ -729,6 +726,12 @@ Used in electricity. Larger derived units are more commonly used: kWh, mWh, GWh,
 </div>
 <div id="footnotes">
 <hr>
+<div class="footnote" id="_footnotedef_1">
+<a href="#_footnoteref_1">1</a>. For example, gravity: the gravitational force applying to an object attracted by the Earth (i.e. its weight) depends on the position of the object relative to the Earth. It points from the object towards the centre of the Earth, and we remember that its magnitude depends on the square distance from the object to the centre of the Earth.
+</div>
+<div class="footnote" id="_footnotedef_2">
+<a href="#_footnoteref_2">2</a>. For example, air friction: the "resisting force" applying to a moving object depends on the velocity of this object relative to the air.
+</div>
 </div>
 </article>
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
