--- a/pierre_stuff/1.0/art/index.html
+++ b/pierre_stuff/1.0/art/index.html
@@ -54,12 +54,12 @@
   </nav>
 </header>
 <div class="body">
-<div class="nav-container" data-component="pierre_stuff" data-version="0.1">
+<div class="nav-container" data-component="pierre_stuff" data-version="1.0">
   <aside class="nav">
     <div class="panels">
 <div class="nav-panel-menu is-active" data-panel="menu">
   <nav class="nav-menu">
-    <h3 class="title"><a href="../index.html">Pierre&#x27;s Stuff</a></h3>
+    <h3 class="title"><a href="../index.html">About &quot;Pierre&#x27;s Stuff&quot;</a></h3>
 <ul class="nav-list">
   <li class="nav-item is-current-page" data-depth="0">
     <button class="nav-item-toggle"></button>
@@ -105,15 +105,15 @@
 </div>
 <div class="nav-panel-explore" data-panel="explore">
   <div class="context">
-    <span class="title">Pierre&#x27;s Stuff</span>
-    <span class="version">0.1</span>
+    <span class="title">About &quot;Pierre&#x27;s Stuff&quot;</span>
+    <span class="version">1.0</span>
   </div>
   <ul class="components">
     <li class="component is-current">
-      <span class="title">Pierre's Stuff</span>
+      <span class="title">About "Pierre's Stuff"</span>
       <ul class="versions">
         <li class="version is-current is-latest">
-          <a href="../index.html">0.1</a>
+          <a href="../index.html">1.0</a>
         </li>
       </ul>
     </li>
@@ -129,7 +129,7 @@
   <!--
 <nav class="breadcrumbs" aria-label="breadcrumbs">
   <ul>
-    <li><a href="../index.html">Pierre's Stuff</a></li>
+    <li><a href="../index.html">About "Pierre's Stuff"</a></li>
     <li><a href="index.html">Art</a></li>
   </ul>
 </nav>
