--- a/pierre_stuff/1.0/science/prologue.html
+++ b/pierre_stuff/1.0/science/prologue.html
@@ -140,7 +140,7 @@
   <div class="content">
 <article class="doc">
 <h1 class="page">Prologue</h1>
-<p>Click <a href="">here</a> for downloadable PDF version.</p>
+<p>Click <a href="https://drive.google.com/file/d/1LYCsvbYR_SXy2FZf_rA5FPkvt5uwxGv7/view?usp=sharing">here</a> for downloadable PDF version.</p>
 <div class="sect1">
 <h2 id="introduction"><a class="anchor" href="#introduction"></a>Introduction</h2>
 <div class="sectionbody">
