Add paper submission email

--- a/pierre_stuff/1.0/index.html
+++ b/pierre_stuff/1.0/index.html
@@ -137,7 +137,7 @@
 <p>The first section contains papers about some science-related topics I find particularly fascinating. I try to present them in an accessible way – and from a bit of a "different angle" as well. It is still in the making with more stuff in the pipeline, but we have to start somewhere: an introductory paper, then a 3-episode series about energy. To get started: click <a href="science/index.html" class="page">here</a>!</p>
 </div>
 <div class="paragraph">
-<p>Other sections will follow – music, art, society, etc. Just bear with me…</p>
+<p>Other sections will follow – music, art, society, etc. Just bear with me&#8230;&#8203; or, better, contribute! If the temptation of writing teases you, you are most welcome to submit a paper. I will be very happy to publish it. The single publishing criterion is both simple and deliciously arbitrary: that I find the paper well written, interesting, and in the spirit described above! Just email me at my usual address or at <a href="mailto:pierrestuff20@gmail.com">pierrestuff20@gmail.com</a>.</p>
 </div>
 <div class="paragraph">
 <p>I hope you will enjoy the trip – I certainly do!</p>
@@ -162,5 +162,6 @@
 </footer>
 <script src="../../_/js/site.js"></script>
 <script async src="../../_/js/vendor/highlight.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_HTMLorMML"></script>
   </body>
 </html>
