--- a/pierre_stuff/1.0/science/prologue.html
+++ b/pierre_stuff/1.0/science/prologue.html
@@ -346,7 +346,7 @@ The fact that <strong><em>r</em></strong> is smaller than <strong><em>w</em></st
 </ul>
 </div>
 <div class="paragraph">
-<p>In many instances, <strong><em>\$\vec{f}\$<sub>total</sub>(t)</em></strong> can be expressed as a function of <strong><em>\$\vec{pos}\$(t)</em></strong> <sup class="footnote">[<a id="_footnoteref_1" class="footnote" href="#_footnotedef_1" title="View footnote.">1</a>]</sup> and/or <strong><em>\$\vec{v}\$(t)</em></strong> <sup class="footnote">[<a id="_footnoteref_2" class="footnote" href="#_footnotedef_2" title="View footnote.">2</a>]</sup>.</p>
+<p>In many instances, <strong><em>\$\vec{f}\$<sub>total</sub>(t)</em></strong> can be expressed as a function of <strong><em>\$\vec{pos}\$(t)</em></strong> <sup class="footnote">[<a id="_footnoteref_1" class="footnote" href="#_footnotedef_1" title="For example, gravity: the gravitational force applying to an object attracted by the Earth (i.e. its weight) depends on the position of the object relative to the Earth. It points from the object towards the centre of the Earth, and we remember that its magnitude depends on the square distance from the object to the centre of the Earth.">1</a>]</sup> and/or <strong><em>\$\vec{v}\$(t)</em></strong> <sup class="footnote">[<a id="_footnoteref_2" class="footnote" href="#_footnotedef_2" title="For example, air friction: the resisting force applying to a moving object depends on the velocity of this object relative to the air.">2</a>]</sup>.</p>
 </div>
 <div class="paragraph">
 <p>As a consequence, the relation <strong><em>\$\vec{f}\$<sub>total</sub>(t) = m\$\vec{γ}\$(t)</em></strong> can be transformed into an equation that binds <strong><em>\$\vec{pos}\$(t)</em></strong>, <strong><em>\$\vec{v}\$(t)</em></strong>, and <strong><em>\$\vec{γ}\$(t)</em></strong>. In other words, a relation between <strong><em>\$\vec{pos}\$(t)</em></strong>, its variation and the variation of its variation! Maths will rescue us here&#8230;&#8203; Such equations are called <em>differential equations</em>, and have been studied extensively. They allow us to calculate <strong><em>\$\vec{pos}\$(t)</em></strong> as a function of time only, i.e. to predict the object&#8217;s trajectory. To be honest, most differential equations can&#8217;t be solved into clean formulae. Instead, <strong><em>\$\vec{pos}\$(t)</em></strong> has to be calculated step by step by a computer, following small time increments. But in some very useful cases, we can find a nice formula describing <strong><em>\$\vec{pos}\$(t)</em></strong>, a famous example being the movement of satellites around planets, or planets around stars.</p>
@@ -709,12 +709,6 @@ Used in electricity. Larger derived units are more commonly used: kWh, mWh, GWh,
 </div>
 <div id="footnotes">
 <hr>
-<div class="footnote" id="_footnotedef_1">
-<a href="#_footnoteref_1">1</a>. For example, gravity: the gravitational force applying to an object attracted by the Earth (i.e. its weight) depends on the position of the object relative to the Earth. It points from the object towards the centre of the Earth, and we remember that its magnitude depends on the square distance from the object to the centre of the Earth.
-</div>
-<div class="footnote" id="_footnotedef_2">
-<a href="#_footnoteref_2">2</a>. For example, air friction: the "resisting force" applying to a moving object depends on the velocity of this object relative to the air.
-</div>
 </div>
 </article>
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
