Fine-tuning energy1

--- a/pierre_stuff/1.0/science/energy1.html
+++ b/pierre_stuff/1.0/science/energy1.html
@@ -291,6 +291,7 @@
 <div style="border-style: double; padding: 0px 10px 25px 10px; background-color: #ededed;">
 <div class="paragraph">
 <p style="font-size: 120%;"><strong>RECAP</strong></p>
+<hr>
 </div>
 <div class="paragraph">
 <p><strong><em>E<sub>k</sub> = \$1/2mv^2\$</em></strong>: kinetic energy = <em>1/2 x mass x square</em> velocity. The energy of a train at full speed…</p>
@@ -299,7 +300,7 @@
 <p><strong><em>∆E<sub>k</sub> = fd</em></strong>: kinetic energy variation = <em>force x distance</em> (negative if force goes against motion). How force impacts kinetic energy by increasing or decreasing speed via <strong><em>“f=mγ”</em></strong></p>
 </div>
 <div class="paragraph">
-<p><strong><em>P = fv</em></strong>: power = <em>force x velocity</em> (positive if force goes with velocity, negative if force goes against velocity). Derived from the previous equation by stating that energy variation per sec (i.e., power P) equals <em>f x distance variation per second</em> (i.e. velocity <em>v</em>).</p>
+<p><strong><em>P = fv</em></strong>: power = <em>force x velocity</em> (positive if force goes with velocity, negative if force goes against velocity). Derived from the previous equation by stating that energy variation per sec (i.e., <em>power P</em>) equals <em>f x distance variation per second</em> (i.e. velocity <em>v</em>).</p>
 </div>
 <div class="paragraph">
 <p><strong><em>E = mc<sub>p</sub>∆T</em></strong>: energy required to heat up an object = <em>mass x specific heat x temperature variation</em>. Negative if temperature decreases – then the object releases energy.</p>
@@ -351,9 +352,6 @@
 <p>Then, at night, the ground, the air, water, etc., radiate this energy back, mainly as <em>infrared</em>, and consequently cool down: thermal energy re-transforms into radiated energy. Now here come our climate issues: part of the infrared radiated by the ground at night is absorbed by the atmosphere, heating it up instead of leaving the Earth for good. The more carbon dioxide in the atmosphere, the more <em>infrared</em> is absorbed. This doesn&#8217;t apply to other wavelengths, so most of the incoming solar energy gets through, while the nightly outgoing infrared is trapped. Human activity increases the amount of carbon dioxide in the atmosphere because of our reliance on processes that use combustion. Combustion – burning petrol, coal, wood, anything that contains carbon – produces carbon dioxide. So the Earth is becoming a "solar energy trap". It stores more and more energy in the form of thermal energy, and consequently the average temperature increases. Snow and ice melt, which viciously accelerates the process: as the amount of white surface on the Earth decreases, so does the proportion of sunlight that is reflected to space. More sunlight is absorbed – with its energy transformed into thermal energy. By now, even our oceans have started warming up significantly, in spite of their huge mass and very high specific heat. Reversing the process will take centuries…</p>
 </div>
 <div style="border-style: double; padding: 0px 10px 25px 10px; background-color: #ededed;">
-<div class="paragraph">
-<p style="font-size: 120%;"><strong>RECAP</strong></p>
-</div>
 <div class="paragraph">
 <p>Light, radio, X-rays are all electromagnetic waves, i.e., oscillating “electromagnetic fields” propagating through void at speed c=300000km/s.</p>
 </div>
@@ -435,6 +433,7 @@
 <div style="border-style: double; padding: 0px 10px 25px 10px; background-color: #ededed;">
 <div class="paragraph">
 <p style="font-size: 120%;"><strong>RECAP</strong></p>
+<hr>
 </div>
 <div class="paragraph">
 <p>Friction is an “energy degrader”, turning macroscopic kinetic energy into thermal energy.</p>
