--- a/pierre_stuff/1.0/index.html
+++ b/pierre_stuff/1.0/index.html
@@ -121,9 +121,9 @@
   <div class="content">
 <article class="doc">
 <h1 class="page">About this project</h1>
-<div class="paragraph">
-<p><strong>The pleasure of sharing&#8230;&#8203;</strong></p>
-</div>
+<div class="sect1">
+<h2 id="the-pleasure-of-sharing"><a class="anchor" href="#the-pleasure-of-sharing"></a>The pleasure of sharing&#8230;&#8203;</h2>
+<div class="sectionbody">
 <div class="paragraph">
 <p>Dear Reader,</p>
 </div>
@@ -148,6 +148,37 @@
 <div class="paragraph">
 <p>Pierre Combelles</p>
 </div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="le-plaisir-de-partager"><a class="anchor" href="#le-plaisir-de-partager"></a>Le plaisir de partager</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Cher Lecteur (ou Lectrice, chacun est libre),</p>
+</div>
+<div class="paragraph">
+<p>Comprendre, aimer et partager. Au jeu des associations, ça fait un peu divan du psy, Roméo et Juliette et manteau de Saint-Martin. Mais en l&#8217;occurrence il s&#8217;agit juste de trois de mes grands plaisirs: apprendre et surtout comprendre des choses; prendre le temps d&#8217;apprécier le monde qui m&#8217;entoure – les gens, la nature, la musique; et partager ce qui m&#8217;a paru intéressant ou admirable.</p>
+</div>
+<div class="paragraph">
+<p>Les blogs ou les réseaux sociaux sont de beaux outils, mais ils sont prévus pour des formats relativement courts. Destiné à des cogitations un peu plus longues, ce site a donc été conçu pour publier/consulter de bon vieux "articles" ou "essais", sous une forme lisible sur écrans de toutes tailles. La motivation principale en est mon égoïste plaisir d&#8217;écrire et de partager. Mais, ami.e Lecteur.trice, j&#8217;espère partager ce plaisir avec toi: le plaisir de réfléchir,  de découvrir du nouveau, de s&#8217;amuser un peu. Le prix à payer: une lecture active de plus d&#8217;une demi-page. ;-)</p>
+</div>
+<div class="paragraph">
+<p>La première section est consacrée à des sujets scientifiques que je trouve "intéressants et racontables". J&#8217;essaie de les présenter d&#8217;une manière accessible, mais aussi sous un angle un peu "différent". Ce n&#8217;est qu&#8217;un début et il y a trop de sujets en attente, mais il faut bien commencer quelque part – en l&#8217;occurrence avec un prologue et une série de trois "épisodes" sur l&#8217;énergie. Pour commencer, clique <a href="science/index.html" class="page">ici</a>!</p>
+</div>
+<div class="paragraph">
+<p>D&#8217;autres sections suivront – musique, arts, société etc., mais je dois te demander d&#8217;être patient.e… ou mieux, de contribuer! Si l&#8217;écriture te titille, en français ou en anglais, n&#8217;hésite pas à proposer un papier, je serai ravi de le publier. Il n&#8217;y a qu&#8217;un critère de sélection, délicieusement arbitraire: que je trouve le papier bien écrit, intéressant et dans l&#8217;esprit décrit ci-dessus… Il suffit d&#8217;envoyer un email à mon adresse habituelle ou à <a href="mailto:pierrestuff20@gmail.com">pierrestuff20@gmail.com</a>.</p>
+</div>
+<div class="paragraph">
+<p>Cette petite aventure me ravit – j&#8217;espère qu&#8217;elle te plaira aussi…</p>
+</div>
+<div class="paragraph">
+<p>Mille mercis pour ta visite!</p>
+</div>
+<div class="paragraph">
+<p>Pierre Combelles</p>
+</div>
+</div>
+</div>
 </article>
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
   <div class="toc-menu"></div>
@@ -156,12 +187,11 @@
 </main>
 </div>
 <footer class="footer">
-  <p style="color:black";>Editorial advice and website support by Vanda Illyes.</p>
+  <p>Editorial advice and website support by Vanda Illyes.</p>
   <p>This page was built using the Antora default UI.</p>
   <p>The source code for this UI is licensed under the terms of the MPL-2.0 license.</p>
 </footer>
 <script src="../../_/js/site.js"></script>
 <script async src="../../_/js/vendor/highlight.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_HTMLorMML"></script>
   </body>
 </html>
