--- a/pierre_stuff/1.0/science/energy2.html
+++ b/pierre_stuff/1.0/science/energy2.html
@@ -123,7 +123,7 @@
 <article class="doc">
 <h1 class="page">Energy – Episode 2</h1>
 <div class="paragraph">
-<p>&lt;placeholder&gt;</p>
+<p>Click <a href="https://drive.google.com/file/d/1SFgUNg2Ba_HSVDU9EL6SlKBlBuqf-1OP/view?usp=sharing">here</a> for downloadable PDF version.</p>
 </div>
 </article>
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
