--- a/pierre_stuff/1.0/science/prologue.html
+++ b/pierre_stuff/1.0/science/prologue.html
@@ -122,7 +122,13 @@
   <div class="content">
 <article class="doc">
 <h1 class="page">Prologue</h1>
+<div id="preamble">
+<div class="sectionbody">
+<div class="paragraph">
 <p>Click <a href="https://drive.google.com/file/d/1LYCsvbYR_SXy2FZf_rA5FPkvt5uwxGv7/view?usp=sharing">here</a> for downloadable PDF version.</p>
+</div>
+</div>
+</div>
 <div class="sect1">
 <h2 id="introduction"><a class="anchor" href="#introduction"></a>Introduction</h2>
 <div class="sectionbody">
@@ -706,9 +712,6 @@ Used in electricity. Larger derived units are more commonly used: kWh, mWh, GWh,
 </table>
 </div>
 </div>
-</div>
-<div id="footnotes">
-<hr>
 </div>
 </article>
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
